--- a/manifest.json
+++ b/manifest.json
@@ -38,6 +38,13 @@
     "commands": {
         "_execute_action": {
             "suggested_key": {
+                "default": "Alt+V",
+                "mac": "Alt+V"
+            }
+        },
+        "add_regular": {
+            "description": "add normal sols",
+            "suggested_key": {
                 "default": "Ctrl+B",
                 "mac": "Command+B"
             }
